--- a/css/styles.css
+++ b/css/styles.css
@@ -167,12 +167,9 @@ body {
   justify-content: space-between;
   height: 5rem;
 }
-.header-logo {
-  font-size: 1rem;
-  font-weight: 500;
-  letter-spacing: -0.01em;
-  color: var(--foreground);
-  text-decoration: none;
+.logo {
+  width: 80px;
+  height: auto;
 }
 .header-nav {
   display: none;
