Removed page-header bg image

--- a/css/styles.css
+++ b/css/styles.css
@@ -295,9 +295,23 @@ body {
   justify-content: center;
   padding-top: 5rem;
   background-image:
-    linear-gradient(to bottom, var(--background), 60%, transparent 100%),
+    linear-gradient(
+      to bottom,
+      white 0px,
+      white 20px,
+      var(--background),
+      60%,
+      transparent 100%
+    ),
     linear-gradient(to right, var(--background) 50%, transparent 100%),
-    linear-gradient(to top, var(--background), 25%, transparent 100%),
+    linear-gradient(
+      to top,
+      white 0px,
+      white 20px,
+      var(--background),
+      25%,
+      transparent 100%
+    ),
     url("../images/light_flow.jpg");
   background-size: cover;
   background-position: right center;
@@ -456,14 +470,6 @@ body {
   flex-direction: column;
   justify-content: center;
   padding-top: 5rem;
-  background-image:
-    linear-gradient(to bottom, var(--background), 75%, transparent 100%),
-    linear-gradient(to right, var(--background) 30%, transparent 60%),
-    linear-gradient(to top, var(--background), 25%, transparent 100%),
-    url("../images/dark_flow_2.png");
-  background-size: cover;
-  background-position: right center;
-  background-repeat: no-repeat;
 }
 .page-header + section {
   margin-top: -1px; /* Pulls the next section up by 1 pixel to cover the gap */
@@ -614,14 +620,6 @@ body {
       linear-gradient(to right, var(--background) 50%, transparent 100%),
       linear-gradient(to top, var(--background), 25%, transparent 100%),
       url("../images/light_flow.jpg");
-  }
-  .page-header {
-    min-height: 60vh; /* Reduces top padding for quicker access to content */
-    background-image:
-      linear-gradient(to bottom, var(--background), 80%, transparent 100%),
-      linear-gradient(to right, var(--background) 50%, transparent 100%),
-      linear-gradient(to top, var(--background), 35%, transparent 100%),
-      url("../images/dark_flow_2.png");
   }
 }
 .description {
